# ds3231-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  codecov.yaml  coverage.sh
.cargo/: audit.toml
.cursor/rules/: async-blocking.mdc  error-handling.mdc  overview.mdc  register-modeling.mdc  testing.mdc
.github/workflows/: changelog-check.yml  ci.yml
examples/esp-alarm/src/: main.rs
src/: alarm.rs  asynch.rs  datetime.rs  fmt.rs  lib.rs  registers.rs
