[package]
name = "ds3231"
version = "0.1.0"
authors = ["Christopher B. Liebman <liebman@zod.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "A platform-agnostic driver for the DS3231 precision real-time clock"
repository = "https://github.com/liebman/ds3231-rs"
documentation = "https://docs.rs/ds3231"
keywords = ["embedded", "rtc", "ds3231", "i2c", "no-std"]
categories = ["embedded", "no-std", "hardware-support"]
readme = "README.md"

[dependencies]
bitfield = { version = "0.15.0" }
chrono = { version = "0.4", default-features = false, features = [] }
embedded-hal = {version = "1.0.0"}
embedded-hal-async = {version = "1.0.0", optional = true}
log = { version = "0.4.20", optional = true }
defmt = { version = "0.3.8", optional = true }
paste = { version = "1.0.15" }

[dev-dependencies]
embedded-hal-mock = { version = "0.11.1", features = ["eh1", "embedded-hal-async"] }
tokio = { version = "1.0", features = ["rt", "macros"] }

[features]
default = []
async = ["dep:embedded-hal-async"]  # This feature only enables async I2C support
log = ["dep:log"]
defmt = ["dep:defmt"]

[lib]
name = "ds3231"
test = true  # Enable testing with std
